# keypoints_annotator

./: .envrc  README.md  bbox_configs.py  create_kpt_database_file.py  kpt_configs.py  pyproject.toml  remote_connect.sh
annotation_tools/: annotation_tools.py  db_bbox_utils.py  db_dataset_utils.py  default_config.py
annotation_tools/templates/: edit_image.html  layout.html
