[tool.poetry]
name = "keypoints"
version = "0.1.0"
description = "keypoints annotator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
Jinja2 = "^3.1.2"
Flask-PyMongo = "^2.3.0"
pymongo = "^4.1.1"
pathlib = "^1.0.1"
orjson = "^3.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
